...
    DolbyButtonsContainer(screenName = screenName) {
        if (false) { // hiding for now because we don't have a working single view stream
            StyledButton(
                Modifier
                    .fillMaxWidth()
                    .semantics {
                        contentDescription = "Single View"
                        testTag = "Single View"
                    },
                buttonText = "Subscribe Single View",
                onClickAction = {
                    navigationViewModel.onUiAction(NavAction.ToSubscribe(isMultiView = false))
                },
...
            )
            Spacer(modifier = Modifier.height(5.dp))
        }
        StyledButton(
            Modifier
                .semantics {
                    contentDescription = "Multi View"
                    testTag = "Multi View"
                }
                .fillMaxWidth(),
            buttonText = "Subscribe Multi View",
            onClickAction = {
                navigationViewModel.onUiAction(NavAction.ToSubscribe(isMultiView = true))
...
