...
            onDispose {
                lifecycle.removeObserver(observer)
                sourceTrack.disableAsync()
            }
        }
        AndroidView(
            modifier = Modifier.testTag(sourceTrack.sourceId ?: "CAM1"),
            factory = { videoRenderer },
            update = { view ->
                view.setScalingType(RendererCommon.ScalingType.SCALE_ASPECT_FIT)
            }
        )
        SourceText(
...
